Remove PrintGC option for substring benchmarks